# Umbrella-Fetch

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
completions/: _umbrella-fetch  umbrella-fetch.bash  umbrella-fetch.fish
